--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Developing general-purpose dexterous manipulation, particularly for intricate twisting tasks, remains a long-standing challenge in robotics. This paper presents DexAnyTwist, a framework that leverages massively parallel reinforcement learning to acquire general dexterous twisting policies capable of generalizing across diverse objects. We first construct a large-scale library of twistable objects, establishing the largest dataset of its kind to date, comprising over 300 instances across 10 categories. However, directly training on such heterogeneous dynamics typically leads to mode collapse, where a single policy fails to adapt to conflicting physical properties. To overcome this, we propose the Iterative Hybrid Manipulation Identification algorithm. This strategy iteratively partitions the complex hybrid system into distinct subsystems, allowing for the independent optimization of specialized experts to capture varying physical properties. Empirical results demonstrate that DexAnyTwist significantly outperforms state-of-the-art baselines, achieving a dominant success rate of 90.4%. Furthermore, the framework exhibits superior zero-shot real-world performance, successfully manipulating unseen objects with complex geometries without requiring object-specific fine-tuning.
+            Developing general-purpose dexterous manipulation, particularly for intricate twisting tasks, remains a long-standing challenge. Large-scale training on massive datasets encompassing a vast spectrum of geometric and physical properties is a promising path. Yet, the hybrid dynamical space inherent in heterogeneous datasets creates intrinsic conflicts, where standard learning paradigms fail to synthesize a cohesive control strategy across disparate physical laws. We present DexAnyTwist, a framework that reformulates the general twisting task as a problem of identification and control within a hybrid dynamical system. This approach utilizes forward partitioning to isolate data modes based on expert performance and backward refinement to optimize specialized policies. A learned gating mechanism then dynamically composes these experts, effectively mitigating interference between distinct dynamic modes. Beyond achieving state-of-the-art performance on our large-scale dataset, our framework spontaneously evolves manipulation primitives consistent with human twisting, and demonstrates superior zero-shot generalization to novel real-world geometries. This study not only solves a complex class of twisting tasks but also establishes a scalable pathway for robots to acquire general-purpose contact-rich manipulation skills.
           </p>
         </div>
       </div>
@@ -289,7 +289,7 @@
 
           <div class="column is-one-quarter">
             <video autoplay controls muted loop playsinline style="width: 100%;">
-              <source src="./static/videos/real_screw.mp4" type="video/mp4">
+              <source src="./static/videos/real_color_bottle.mp4" type="video/mp4">
             </video>
           </div>
 
@@ -361,6 +361,35 @@
           </div>
 
 
+
+
+
+
+
+          <div class="column is-one-quarter">
+            <video autoplay controls muted loop playsinline style="width: 100%;">
+              <source src="./static/videos/real_others1.mp4" type="video/mp4">
+            </video>
+          </div>
+
+          <div class="column is-one-quarter">
+            <video autoplay controls muted loop playsinline style="width: 100%;">
+              <source src="./static/videos/real_blue_bottle.mp4" type="video/mp4">
+            </video>
+          </div>
+
+          <div class="column is-one-quarter">
+            <video autoplay controls muted loop playsinline style="width: 100%;">
+              <source src="./static/videos/real_shampoo.mp4" type="video/mp4">
+            </video>
+          </div>
+
+          <div class="column is-one-quarter">
+            <video autoplay controls muted loop playsinline style="width: 100%;">
+              <source src="./static/videos/real_tools.mp4" type="video/mp4">
+            </video>
+          </div>
+          
 
 
         </div>
