--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </a>
               </span> -->
               <!-- Code Link. -->
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href="https://github.com/Prevalenter/DexAnyTwist"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -114,7 +114,7 @@
                   </span>
                   <span>Code</span>
                   </a>
-              </span>
+              </span> -->
               <!-- Dataset Link. -->
               <!-- <span class="link-block">
                 <a href="https://prevalenter.github.io/dexanytwist.github.io/"
@@ -230,7 +230,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Video</h2>
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/JIjk7wuUBdk?rel=0&amp;showinfo=0"
+          <iframe src="https://www.youtube.com/embed/XeEJBv8aj5s?rel=0&amp;showinfo=0"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
