--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Video</h2>
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/XeEJBv8aj5s?rel=0&amp;showinfo=0"
+          <iframe src="https://www.youtube.com/embed/e1vVgf3w1qc?rel=0&amp;showinfo=0"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
