--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
               DexAnyTwist: Learning General Dexterous Twisting with Hybrid Manipulation System Identification
             </h1>
           </div>
-          <div class="is-size-5 publication-authors">
+          <!-- <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a >Authors</a><sup>1</sup>,</span>
-          </div>
+          </div> -->
 
-          <div class="is-size-5 publication-authors">
+          <!-- <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>Huazhong University of Science and Technology</span>
-          </div>
+          </div> -->
 
           <div class="column has-text-centered">
             <div class="publication-links">
